Whacky fix for navigation on iPhone safari

--- a/Resources/Private/Sass/Theme/_navigation.scss
+++ b/Resources/Private/Sass/Theme/_navigation.scss
@@ -190,7 +190,7 @@
 
     .opening-hours {
         @extend .container;
-        margin-bottom: 12px;
+        margin-bottom: 130px;
     }
     .frame-type-twoColumns {
         h1, h2, h3, h4, h5, h6 {
@@ -348,9 +348,9 @@
 }
 
 @include media-breakpoint-down(md) {
-    .bottom-0 {
-        // bottom: 0;
-    }
+    // .bottom-0 {
+    //     // bottom: 0;
+    // }
     body.nav-open {
         overflow: hidden;
     }
